--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
   <div class="chart" id="map"></div>
   <script src="/scripts/map.js"></script>
+  <script>
+    loadDistricts({state: 'California',congress: 114});
+  </script>
 </body>
 
 </html>
