Added Chart Title and Interactivity
The map now reacts to hovering over states, and the title changes
depending on the selected district maps.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 </head>
 
 <body>
+  <div id="title"></div>
   <div class="chart" id="map"></div>
   <script src="/scripts/map.js"></script>
-  <script>
-    loadDistricts({state: 'California',congress: 114});
-  </script>
 </body>
 
 </html>
