--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <!-- Metadata -->
   <title>Congressional Districts</title>
-  <link href="/styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <link href="styles/stylesheet.css" rel="stylesheet" type="text/css" />
   <!-- Libraries -->
-  <script src="/scripts/jquery-3.2.1.min.js"></script>
-  <script src="/scripts/d3.v4.min.js"></script>
+  <script src="scripts/jquery-3.2.1.min.js"></script>
+  <script src="scripts/d3.v4.min.js"></script>
 </head>
 
 <body>
   <div id="title"></div>
   <div class="chart" id="map"></div>
-  <script src="/scripts/map.js"></script>
+  <script src="scripts/map.js"></script>
 </body>
 
 </html>
