Added Choropleth-style Shading to Map
The states are now shaded based on the intensity of gerrymandering,
using a dataset I found that calculated "compactness" of each district.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>District Visualizer</title>
   <link href="styles/stylesheet.css" rel="stylesheet" type="text/css">
   <link rel="icon" type="image/ico" href="favicon.ico">
+  <meta name="viewport" content="initial-scale=1.0, width=device-width" />
   <!-- Libraries -->
   <script src="scripts/jquery-3.2.1.min.js"></script>
   <script src="scripts/d3.v4.min.js"></script>
@@ -14,9 +15,20 @@
   <div id="title">
     <p id="titleText">Congressional District Visualization</p>
   </div>
+  <div class="legend">
+    <p class="legendTitle">Gerrymandering Intensity</p>
+    <div class="legendColors">
+      <div class="legendBar" id="cell1"></div>
+      <div class="legendBar" id="cell2"></div>
+      <div class="legendBar" id="cell3"></div>
+      <div class="legendBar" id="cell4"></div>
+    </div>
+    <p class="legendLabel" id="least">Least</p>
+    <p class="legendLabel" id="most">Most</p>
+  </div>
   <div class="chart" id="map"></div>
   <script src="scripts/map.js"></script>
-  <div class="credits">Created by Atthar Mirza. District data from <a href="http://cdmaps.polisci.ucla.edu/" target="_blank">Jeffrey B. Lewis at UCLA</a>. State data from <a href="http://eric.clst.org/Stuff/USGeoJSON" target="_blank">Eric Celeste</a>. Last updated on 12/12/2017.</div>
+  <div class="credits">Created by Atthar Mirza. District data from <a href="http://cdmaps.polisci.ucla.edu/" target="_blank">Jeffrey B. Lewis at UCLA</a>. State data from <a href="http://eric.clst.org/Stuff/USGeoJSON" target="_blank">Eric Celeste</a>. Last updated on 12/18/2017.</div>
   <div class="timeline">
     <div class="timelineList">
       <div class="year" id="2015">2015</div>
@@ -111,8 +123,8 @@
       </script>
     </div>
   </div>
-  <div class="timelineFade"></div>
-  <div class="footer"></div>
+  <!-- <div class="timelineFade"></div> -->
+  <!-- <div class="footer"></div> -->
 
 </body>
 
