Adjusted Legend Position/Interactivity
The legend is now in the same place as the timeline. The timeline
appears when zoomed in on a state. The legend appears when looking at
the whole US.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <p id="titleText">Congressional District Visualization</p>
   </div>
   <div class="legend">
-    <p class="legendTitle">Gerrymandering Intensity</p>
     <div class="legendColors">
       <div class="legendBar" id="cell1"></div>
       <div class="legendBar" id="cell2"></div>
       <div class="legendBar" id="cell3"></div>
       <div class="legendBar" id="cell4"></div>
     </div>
+    <p class="legendTitle">Gerrymandering</p>
     <p class="legendLabel" id="least">Least</p>
     <p class="legendLabel" id="most">Most</p>
   </div>
