Added Intro Text, Modified Legend Slightly
Although commented out for now, there is functionality for introductory
instructions built into the visualization now.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <div id="title">
     <p id="titleText">Congressional District Visualization</p>
   </div>
+  <div id="intro">
+    <!-- <p id="introText">Click on a state to view district shapes. Then use the timeline to see changes and the effects of gerrymandering.</p> -->
+  </div>
   <div class="legend">
     <div class="legendColors">
       <div class="legendBar" id="cell1"></div>
@@ -28,7 +31,7 @@
   </div>
   <div class="chart" id="map"></div>
   <script src="scripts/map.js"></script>
-  <div class="credits">Created by Atthar Mirza. District data from <a href="http://cdmaps.polisci.ucla.edu/" target="_blank">Jeffrey B. Lewis at UCLA</a>. State data from <a href="http://eric.clst.org/Stuff/USGeoJSON" target="_blank">Eric Celeste</a>. Last updated on 12/18/2017.</div>
+  <div class="credits">Created by Atthar Mirza. District data from <a href="http://cdmaps.polisci.ucla.edu/" target="_blank">Jeffrey B. Lewis at UCLA</a>. State data from <a href="http://eric.clst.org/Stuff/USGeoJSON" target="_blank">Eric Celeste</a>. Compactness analysis by <a href="https://github.com/jeffreyshen19/Is-My-District-Gerrymandered" target="_blank">Jeffrey Shen</a>. Last updated on 12/18/2017.</div>
   <div class="timeline">
     <div class="timelineList">
       <div class="year" id="2015">2015</div>
@@ -123,9 +126,9 @@
       </script>
     </div>
   </div>
-  <!-- <div class="timelineFade"></div> -->
-  <!-- <div class="footer"></div> -->
 
+  <div class="timelineFade"></div>
+  <div class="footer"></div>
 </body>
 
 </html>
