Added Custom Scrollbar
This should fix the issues with the scrollbar on Chrome for windows.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
   <div class="chart" id="map"></div>
   <script src="scripts/map.js"></script>
-  <div class="credits">District data from <a href="https://www.census.gov/geo/maps-data/data/cbf/cbf_cds.html" targe="_blank">United States Censu Bureau</a> and <a href="http://cdmaps.polisci.ucla.edu/" target="_blank">UCLA</a>. State data from <a href="http://eric.clst.org/Stuff/USGeoJSON" target="_blank">Eric Celeste</a>. Compactness analysis by <a href="https://github.com/jeffreyshen19/Is-My-District-Gerrymandered" target="_blank">Jeffrey Shen</a>. Last updated on 01/10/2018.</div>
+  <div class="credits">District data from <a href="https://www.census.gov/geo/maps-data/data/cbf/cbf_cds.html" targe="_blank">United States Census Bureau</a> and <a href="http://cdmaps.polisci.ucla.edu/" target="_blank">UCLA</a>. State data from <a href="http://eric.clst.org/Stuff/USGeoJSON" target="_blank">Eric Celeste</a>. Compactness analysis by <a href="https://github.com/jeffreyshen19/Is-My-District-Gerrymandered" target="_blank">Jeffrey Shen</a>. Last updated on 01/10/2018.</div>
   <div class="timeline">
     <div class="timelineList">
       <div class="year" id="2017">2017</div>
@@ -153,7 +153,7 @@
     </div>
   </div>
 
-  <div class="timelineFade"></div>
+  <!-- <div class="timelineFade"></div> -->
   <div class="footer"></div>
 </body>
 
