Color Changes and Title Improvement
Title now gets drop shadow behind it and the color scheme is now based
off of the Atlantic's new colors.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Metadata -->
   <title>District Visualizer</title>
   <link href="styles/stylesheet.css" rel="stylesheet" type="text/css">
-  <link rel="icon" type="image/ico" href="favicon.ico">
+  <!-- <link rel="icon" type="image/ico" href="favicon.ico"> -->
   <meta name="viewport" content="initial-scale=1.0, width=device-width" />
   <!-- Libraries -->
   <script src="scripts/jquery-3.2.1.min.js"></script>
@@ -36,7 +36,7 @@
     <div class="timelineList">
       <div class="year" id="2017">2017</div>
       <script>
-        $('#2017').click(function() {
+        // $('#2017').click(function() {
           $('.year').css('color', '#000');
           loadCongress(115);;
           loadDistricts({
