--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     <div class="timelineList">
       <div class="year" id="2017">2017</div>
       <script>
-        // $('#2017').click(function() {
+        $('#2017').click(function() {
           $('.year').css('color', '#000');
           loadCongress(115);;
           loadDistricts({
             state: state,
             congress: congress
           });
-          $(this).css('color', '#36c87e');
+          $(this).css('color', '#31C6CC');
         });
       </script>
 
@@ -56,7 +56,7 @@
             state: state,
             congress: congress
           });
-          $(this).css('color', '#36c87e');
+          $(this).css('color', '#31C6CC');
         });
       </script>
 
@@ -69,7 +69,7 @@
             state: state,
             congress: congress
           });
-          $(this).css('color', '#36c87e');
+          $(this).css('color', '#31C6CC');
         });
       </script>
 
@@ -82,7 +82,7 @@
             state: state,
             congress: congress
           });
-          $(this).css('color', '#36c87e');
+          $(this).css('color', '#31C6CC');
         });
       </script>
 
@@ -95,7 +95,7 @@
             state: state,
             congress: congress
           });
-          $(this).css('color', '#36c87e');
+          $(this).css('color', '#31C6CC');
         });
       </script>
 
@@ -108,7 +108,7 @@
             state: state,
             congress: congress
           });
-          $(this).css('color', '#36c87e');
+          $(this).css('color', '#31C6CC');
         });
       </script>
 
@@ -121,7 +121,7 @@
             state: state,
             congress: congress
           });
-          $(this).css('color', '#36c87e');
+          $(this).css('color', '#31C6CC');
         });
       </script>
 
@@ -134,7 +134,7 @@
             state: state,
             congress: congress
           });
-          $(this).css('color', '#36c87e');
+          $(this).css('color', '#31C6CC');
         });
       </script>
 
@@ -147,7 +147,7 @@
             state: state,
             congress: congress
           });
-          $(this).css('color', '#36c87e');
+          $(this).css('color', '#31C6CC');
         });
       </script>
     </div>
